<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/fromLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/from"
        app:layout_constraintBottom_toBottomOf="@+id/gteEditTxt"
        app:layout_constraintEnd_toStartOf="@+id/gteEditTxt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gteEditTxt" />

    <EditText
        android:id="@+id/gteEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/date_format"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fromLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="@+id/lteEditTxt"
        app:layout_constraintEnd_toStartOf="@+id/lteEditTxt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lteEditTxt" />

    <EditText
        android:id="@+id/lteEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/date_format"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toLabel"
        app:layout_constraintTop_toBottomOf="@+id/gteEditTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>